--- a/ServiceComplex/Pages/Planing/Shift.cshtml
+++ b/ServiceComplex/Pages/Planing/Shift.cshtml
@@ -169,24 +169,24 @@
                             <div class="form-row">
                                 <div class="col-md-6 mb-5">
                                     <label>زمان شروع:</label>
-                                    <input id="ShfStartTime" name="ShfStartTime" type="text" class="form-control basic border-none">
+                                    <input id="ShfStartTime" name="ShfStartTime" type="time" class="form-control basic border-none">
                                 </div>
                             </div>
                             <div class="form-row">
                                 <div class="col-md-6 mb-5">
                                     <label>زمان پایان:</label>
-                                    <input id="ShfEndTime" name="ShfEndTime" type="text" class="form-control basic border-none">
+                                    <input id="ShfEndTime" name="ShfEndTime" type="time" class="form-control basic border-none">
                                 </div>
                             </div>
                             <div class="form-row">
                                 <div class="col-md-6 mb-5">
                                     <label>تلورانس(دقیقه):</label>
-                                    <input id="ShfTelorance" name="ShfTelorance" type="text" class="form-control basic border-none">
+                                    <input id="ShfTelorance" name="ShfTelorance" type="number" class="form-control basic border-none">
                                 </div>
                             </div>
                             <div class="form-row" hidden>
                                 <div class="col-md-6 mb-5">
-                                    <input id="ShfId" name="ShfId" type="text" class="form-control basic border-none">
+                                    <input id="ShfId" name="ShfId" type="number" class="form-control basic border-none">
                                 </div>
                             </div>
 
