--- a/ServiceComplex/Pages/Test.cshtml
+++ b/ServiceComplex/Pages/Test.cshtml
@@ -1,1 +1,70 @@
-﻿
+﻿@page
+@model TestModel
+
+<link href="~/plugins/flatpickr/flatpickr.css" rel="stylesheet" type="text/css">
+<link href="~/plugins/noUiSlider/nouislider.min.css" rel="stylesheet" type="text/css">
+<!-- END THEME GLOBAL STYLES -->
+<!--  BEGIN CUSTOM STYLE FILE  -->
+<link href="~/assets/css/scrollspyNav.css" rel="stylesheet" type="text/css" />
+<link href="~/plugins/flatpickr/custom-flatpickr.css" rel="stylesheet" type="text/css">
+<link href="~/plugins/noUiSlider/custom-nouiSlider.css" rel="stylesheet" type="text/css">
+<link href="~/plugins/bootstrap-range-Slider/bootstrap-slider.css" rel="stylesheet" type="text/css">
+
+
+
+<div id="content" class="main-content">
+    <div class="layout-px-spacing">
+
+        <div class="page-header">
+            <div class="page-title">
+                <h3>گروه کالا ها</h3>
+            </div>
+        </div>
+
+        <div class="row layout-top-spacing" id="cancel-row">
+
+            <div class="col-xl-12 col-lg-12 col-sm-12  layout-spacing">
+               
+<div class="widget-content widget-content-area">
+ 
+    <div class="form-group mb-0">
+        <input name="ShfStartTime" id="timeFlatpickr" class="" type="text" placeholder="انتخاب تاریخ...">
+    </div>
+
+    <div class="code-section-container">
+
+        <button class="btn toggle-code-snippet"><span>کد</span></button>
+
+        <div class="code-section text-left">
+            <pre>
+
+</pre>
+        </div>
+    </div>
+</div>
+            </div>
+
+        </div>
+
+    </div>
+</div>
+
+
+
+<script src="~/assets/js/scrollspyNav.js"></script>
+<script src="~/plugins/flatpickr/flatpickr.js"></script>
+<script src="~/plugins/noUiSlider/nouislider.min.js"></script>
+<script src="~/plugins/bootstrap-range-Slider/bootstrap-rangeSlider.js"></script>
+@section scripts
+    {
+    <script>
+        var f4 = flatpickr(document.getElementById('timeFlatpickr'),
+        {
+           
+            enableTime: true,
+            noCalendar: true,
+            dateFormat: "H:i",
+            defaultDate: "0:0"
+        });
+    </script>
+}
