--- a/ServiceComplex/Pages/Products/Assignment.cshtml
+++ b/ServiceComplex/Pages/Products/Assignment.cshtml
@@ -23,7 +23,7 @@
                 {
                     <li id="category-li" class="file-tree-folder ">
                     <div class="form-group">
-                    <input type="checkbox" id=${@i} onchange="checkboxControl(this)" name="main-category-checkbox"  />
+                    <input type="checkbox" id=@i onchange="checkboxControl(this)" name="main-category-checkbox"  />
                      <span id="category-span" class="new-control-indicator"> @Model.List[i].Name</span> 
                     </div>
                     <ul>
@@ -32,8 +32,8 @@
                             
                             <li id="product-li">
                                 <div class="form-group">
-                                <input type="checkbox"  class='mainCheckboxes' id=${@i} name="main-product-checkbox"   /> 
-                                <span id="product-span" class="new-control-indicator"> @Model.Products[i].products[j].PrdName</span> 
+                                                    <input type="checkbox" class='mainCheckboxes' id=@i name="main-product-checkbox" value="@Model.Products[i].products[j].PrdUid" />
+                                                    <span id="product-span" class="new-control-indicator"> @Model.Products[i].products[j].PrdName</span> 
                             </div>
                             </li>
                         }
@@ -47,33 +47,43 @@
             <div class="col-lg-2">
                 <div id="navSection" class="align-content-center">
                     <div class="align-content-center">
-            <button type="button" id="moveSelected"  class=" btn btn-info btn-sm btn-rounded ">></button>
-            <button type="button" id="moveAll" class="  btn btn-info btn-sm btn-rounded ">>></button>
+            <button type="button" onclick="moveSelected()" id="moveSelected"  class="btn btn-info btn-sm btn-rounded ">></button>
+            <br/>
+            <button type="button" id="moveAll" class="btn btn-info btn-sm btn-rounded ">>></button>
             </div>
             </div>
             </div>
             <div class="col-lg-5">
-        <div id="treeviewAnimated" class=" layout-spacing">
+                <div id="treeviewAnimated" class=" layout-spacing">
 
-            <div class="statbox widget box box-shadow">
+                    <div class="statbox widget box box-shadow">
 
-            <ul class="file-tree">
-                @for(int i = 0; i < Model.List.Count; i++)
-                {
-                    <li class="file-tree-folder">
-                    @Model.List[i].Name
-                    <ul id="productGroup">
-                        @for(int j = 0; j < Model.Products[i].products.Count; j++)
-                        {
-                            <li id="product">@Model.Products[i].products[j].PrdName</li>
-                        }
-                    </ul>
-                    </li>
-                }       
-            </ul>
+                        <ul class="file-tree">
+                            @for (int i = 10000; i < Model.List.Count; i++)
+                            {
+                                <li id="category-li" class="file-tree-folder ">
+                                    <div class="form-group">
+                                        <input type="checkbox" id=@i onchange="checkboxControl(this)" name="category-checkbox" />
+                                        <span id="category-span" class="new-control-indicator"> @Model.List[i-10000].Name</span>
+                                    </div>
+                                    <ul>
+                                        @for (int j = 10000; j < Model.Products[i - 10000].products.Count; j++)
+                                        {
+
+                                            <li id="product-li">
+                                                <div class="form-group">
+                                                    <input type="checkbox" class='mainCheckboxes' id=@i name="product-checkbox" value="@Model.Products[i-10000].products[j-10000].PrdUid" />
+                                                    <span id="product-span" class="new-control-indicator"> @Model.Products[i-10000].products[j-10000].PrdName</span>
+                                                </div>
+                                            </li>
+                                        }
+                                    </ul>
+                                </li>
+                            }
+                        </ul>
+                    </div>
+                </div>
             </div>
-        </div>
-        </div>
 
     </div>
 </div>
@@ -91,11 +101,6 @@
 
         <script>
      
-         $(document).ready(function(){
-             $.ajax({
-                url:"?handler=GetProductsByCategory&id=" + value,
-
-             })
-         });
+        
         </script>
 }
